--- a/06_dom/three.html
+++ b/06_dom/three.html
@@ -10,6 +10,12 @@
     
 </body>
 <script>
+
+// textContents : all text contained by parent and the ones used by its children for formatting only (like bold italic etc.) 
+// innerText : all text contained by parent and all its children 
+// innerHTML : whole HTML contents inside that element
+
+    
     const div = document.createElement('div')
     console.log(div);
     div.className = "main"
